test/visibility/except/exceptPrivateSymbol.good
exceptPrivateSymbol.chpl:8: error: Bad identifier in 'except' clause, 'b' is private
